adding search button

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,4 +6,16 @@
           android:layout_height="match_parent"
           android:id="@+id/map"
           tools:context=".MapsActivity"
-          android:name="com.google.android.gms.maps.SupportMapFragment"/>
+          android:name="com.google.android.gms.maps.SupportMapFragment" >
+
+          <Button
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center|bottom"
+                  android:text="Buscar"
+                  android:background="@color/colorPrimary"
+                  android:textColor="@color/colorWhite"
+                  android:layout_marginBottom="20dp"
+          />
+
+</fragment>
