enable search button, user location and map on click to add marker

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,6 +16,7 @@
                   android:background="@color/colorPrimary"
                   android:textColor="@color/colorWhite"
                   android:layout_marginBottom="20dp"
+                  android:id="@+id/searchBtn"
           />
 
 </fragment>
