--- a/app/src/main/res/layout/activity_cities.xml
+++ b/app/src/main/res/layout/activity_cities.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CitiesActivity">
+        android:orientation="vertical"
+        tools:context=".views.CitiesActivity">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
@@ -21,6 +22,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_cities"/>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleViewCities"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_city_list"
+            android:background="@color/colorWhite"
+    />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
