--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,7 +5,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/map"
-          tools:context=".MapsActivity"
+          tools:context=".views.MapsActivity"
           android:name="com.google.android.gms.maps.SupportMapFragment" >
 
           <Button
